webpack symfony ux + begin cache

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -7,7 +7,7 @@
     <h3>Programme de formation</h3>
 
     <ul>
-        <li>Webpack</li>
+        <li><s>Webpack</s></li>
         <li>Cache PSR-6 - Contracts</li>
 
         <li>Event (listener & subscriber)</li>
