cache PSR6/Contract

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,6 +25,8 @@
     <nav class="mb-3">
         <a href="{{ path('home_index') }}">Accueil</a> -
         <a href="{{ path('webpack_index') }}">Webpack</a> -
+        <a href="{{ path('cache_psr6') }}">Cache PSR6</a> -
+        <a href="{{ path('cache_contracts') }}">Cache Contracts</a> -
     </nav>
     <main>
         <header>
