--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,7 +8,7 @@
 
     <ul>
         <li><s>Webpack</s></li>
-        <li>Cache PSR-6 - Contracts</li>
+        <li><s>Cache PSR-6 - Contracts</s></li>
 
         <li>Event (listener & subscriber)</li>
         <li>Custom Event</li>
