--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,9 @@
         <a href="{{ path('webpack_index') }}">Webpack</a> -
         <a href="{{ path('cache_psr6') }}">Cache PSR6</a> -
         <a href="{{ path('cache_contracts') }}">Cache Contracts</a> -
+        <a href="{{ path('event_index') }}">Les Evènements Symfony</a> -
+
+        <span>Bonjour {{ app.request.attributes.get('_custom_gender') }} {{ app.request.attributes.get('_custom_username', 'inconnu') }}</span>
     </nav>
     <main>
         <header>
