--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,6 +28,7 @@
         <a href="{{ path('cache_psr6') }}">Cache PSR6</a> -
         <a href="{{ path('cache_contracts') }}">Cache Contracts</a> -
         <a href="{{ path('event_index') }}">Les Evènements Symfony</a> -
+        <a href="{{ path('article_index') }}">Liste des articles</a> -
 
         <span>Bonjour {{ app.request.attributes.get('_custom_gender') }} {{ app.request.attributes.get('_custom_username', 'inconnu') }}</span>
     </nav>
