--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,11 +10,12 @@
         <li><s>Webpack</s></li>
         <li><s>Cache PSR-6 - Contracts</s></li>
 
-        <li>Event (listener & subscriber)</li>
-        <li>Custom Event</li>
-        <li>Formulaire (transformer, form personnalisé)</li>
+        <li><s>Event (listener & subscriber)</s></li>
+        <li><s>Custom Event</s></li>
 
         <li>Mailer</li>
+        <li>Formulaire (transformer, form personnalisé)</li>
+
         <li>Command</li>
         <li>Messenger (amqp)</li>
         <li>Test Fonctionnel & Unitaire</li>
