--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,7 @@
         <a href="{{ path('cache_contracts') }}">Cache Contracts</a> -
         <a href="{{ path('event_index') }}">Les Evènements Symfony</a> -
         <a href="{{ path('article_index') }}">Liste des articles</a> -
+        <a href="{{ path('contact_index') }}">Contacter nous</a> -
 
         <span>Bonjour {{ app.request.attributes.get('_custom_gender') }} {{ app.request.attributes.get('_custom_username', 'inconnu') }}</span>
     </nav>
