--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -13,8 +13,8 @@
         <li><s>Event (listener & subscriber)</s></li>
         <li><s>Custom Event</s></li>
 
-        <li>Mailer</li>
-        <li>Formulaire (transformer, form personnalisé)</li>
+        <li><s>Mailer</s></li>
+        <li><s>Formulaire (transformer, form personnalisé)</s></li>
 
         <li>Command</li>
         <li>Messenger (amqp)</li>
