--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,6 +31,7 @@
         <a href="{{ path('article_index') }}">Liste des articles</a> -
         <a href="{{ path('contact_index') }}">Contacter nous</a> -
         <a href="{{ path('messenger_index') }}">Messenger</a> -
+        <a href="{{ path('test_index') }}">Tests</a> -
 
         <span>Bonjour {{ app.request.attributes.get('_custom_gender') }} {{ app.request.attributes.get('_custom_username', 'inconnu') }}</span>
     </nav>
